style: fixes words cut off on mid resolutions
...Or when editing the website in a tiling WM. :)

--- a/static/pure/css/layouts/side-menu.css
+++ b/static/pure/css/layouts/side-menu.css
@@ -208,7 +208,7 @@ small screens.
 /*
 Hides the menu at `48em`, but modify this based on your app's needs.
 */
-@media (min-width: 48em) {
+@media (min-width: 76em) {
 
     .header,
     .content {
@@ -235,7 +235,7 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 }
 
-@media (max-width: 48em) {
+@media (max-width: 76em) {
     /* Only apply this when the window is small. Otherwise, the following
     case results in extra padding on the left:
         * Make the window small.
